# ProjectB

./: .env.example  .gitignore  .pre-commit-config.yaml  PULL_REQUEST.md  README.md  TODO.md  claude.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  setup.sh
docs/: DOCKER_TESTING.md  NEO4J_AUTH_FIX.md  PHASE1_USAGE.md
docs/PRDs/: PRD-Analytics.md  PRD-GraphVectorStore.md  PRD-IdentityResolution.md
scripts/: fix_neo4j_auth.sh  process_video.py  reset_neo4j_password.sh  setup_neo4j.py
src/: config.py  logger.py
src/detection/: detector.py  tracker.py
src/features/: face_extractor.py
src/ingestion/: frame_processor.py  video_loader.py
src/storage/: models.py  vector_store.py
tests/: test_setup.py
